@@ -3193,7 +3193,7 @@ min_op (GelCtx *ctx, GelETree * * a, gboolean *exception)
 			 */
 			return gel_stealnode (a[0]);
 		} else {
-			gel_errorout (_("%s: Input not a number or matrix of numbers."),
+			gel_errorout (_("%s: Input not a number or a matrix of numbers."),
 				      "min");
 			return NULL;
 		}
