@@ -1,3 +1,11 @@
+Mon Dec 19 20:07:44 2016  Jiri (George) Lebl <jirka@5z.com>
+
+	* po/eo.po: Add some translations.
+
+	* configure.ac: move file to new name.  Require vte 0.26
+
+	* src/gnome-genius.c: remove deprecated vte functions
+
 Fri Dec 16 17:36:16 2016  Jiri (George) Lebl <jirka@5z.com>
 
 	* examples/complex-analysis-argument-principle.gel: Add argument
